# course-work

./: .gitignore  CMakeLists.txt  Info.plist  README.md  database_schema.sql  resources.qrc  test_data.sql
include/: DbManager.h  DecimalUtils.h  DocumentService.h  MigrationRunner.h
include/repositories/: DocumentLineRepository.h  DocumentRepository.h  IDocumentLineRepository.h  IDocumentRepository.h  IProductRepository.h  IStockRepository.h  ProductRepository.h  StockRepository.h
src/: DbManager.cpp  DocumentService.cpp  MigrationRunner.cpp  main.cpp
src/repositories/: DocumentHelpers.cpp  DocumentLineRepository.cpp  DocumentRepository.cpp  ProductRepository.cpp  StockRepository.cpp
ui/: CounterpartyForm.cpp  CounterpartyForm.h  MainWindow.cpp  MainWindow.h  ProductForm.cpp  ProductForm.h  SupplyForm.cpp  SupplyForm.h  TTNForm.cpp  TTNForm.h  WriteOffForm.cpp  WriteOffForm.h
ui/widgets/: CounterpartiesWidget.cpp  CounterpartiesWidget.h  MovementsWidget.cpp  MovementsWidget.h  ProductsWidget.cpp  ProductsWidget.h  StockBalancesWidget.cpp  StockBalancesWidget.h  SupplyWidget.cpp  SupplyWidget.h  TTNWidget.cpp  TTNWidget.h
